[package]
name = "ppknn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
csv = "1.2"

[target.'cfg(windows)'.dependencies]
tfhe = { git = "https://github.com/kc1212/tfhe-rs", branch = "expose-sk", features = ["boolean", "shortint", "x86_64"] }

[target.'cfg(unix)'.dependencies]
tfhe = { git = "https://github.com/kc1212/tfhe-rs", branch = "expose-sk", features = ["boolean", "shortint", "x86_64-unix"] }


[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
