[package]
name = "ppknn"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Kelong Cong <kelong.cong@esat.kuleuven.be>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
clap = { version = "4.2", features = ["derive"] }
dyn-stack = "0.8.3" # must match the version in tfhe-rs
rand = "0.8.5"
rayon = "1.7.0"
csv = "1.3"

[target.'cfg(windows)'.dependencies]
tfhe = { git = "https://github.com/kc1212/tfhe-rs", branch = "expose-sk", features = ["boolean", "shortint", "x86_64"] }

[target.'cfg(unix)'.dependencies]
tfhe = { git = "https://github.com/kc1212/tfhe-rs", branch = "expose-sk", features = ["boolean", "shortint", "x86_64-unix"] }


[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
